--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines":{
+    "node":"20.15.0"
+  },
   "name": "airbnb",
   "version": "1.0.0",
   "main": "index.js",
@@ -13,6 +16,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
